--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -6,10 +6,11 @@
 
 {% block content %}
   <form method="post">
-    <label for="username">Username</label>
-    <input name="username" id="username" required>
+    <label for="id">Numero de indentificacion</label>
+    <input type="number" name="idcard" id="idcard" min="11111111">
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required>
-    <input type="submit" value="Log In">
+    
+    <input type="submit" value="Iniciar sesion">
   </form>
 {% endblock %}
