--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -17,6 +17,13 @@
     </select>
     <label for="id">Numero de indentificacion</label>
     <input type="number" name="idcard" id="idcard" min="11111111">
+    <select name="rol" id="rol">
+        <option value="0">Estudiante</option>
+        <option value="1">Profesor</option>
+        <option value="2">Funcionario</option>
+        <option value="3">Tutor</option>
+        <option value="4">Otro</option>
+    </select>
     <input type="submit" value="Registrarse">
   </form>
 {% endblock %}
