Register y some classes

--- a/flaskr/templates/userspace/schedule.html
+++ b/flaskr/templates/userspace/schedule.html
@@ -5,5 +5,10 @@
 {% endblock %}
 
 {% block content %}
-  <p>This is the content</p>
+  <!-- {% if terminaesto %}
+    
+  {% else %}
+    
+  {% endif %} -->
+  <p>Hi</p>
 {% endblock %}
