--- a/flaskr/templates/userspace/profile.html
+++ b/flaskr/templates/userspace/profile.html
@@ -7,7 +7,8 @@
 {% block content %}
   {% if g.user %}
     <p>Nombre: {{ g.user['username'] }}</p>
-    
+    <p>Mi horario</p>
+    <a href="{{ url_for('userspace.schedule') }}">Horario</a>
   {% else %}
     <p>No te has logeado</p>
   {% endif %}
