--- a/flaskr/templates/userspace/profile.html
+++ b/flaskr/templates/userspace/profile.html
@@ -2,6 +2,7 @@
 
 {% block header %}
   <h1>{% block title %}My profile{% endblock %}</h1>
+  <a class="action" href="{{ url_for('blog.index') }}">home</a>
 {% endblock %}
 
 {% block content %}
@@ -9,7 +10,7 @@
     <p>Nombre: {{ g.user['username'] }}</p>
     <p>Mi horario</p>
     <a href="{{ url_for('userspace.schedule') }}">Horario</a>
-    <p>Rol: {{ g.user['rol'] }}</p>
+    <p>Rol: {{ rol[0].capitalize() }}</p>
   {% else %}
     <p>No te has logeado</p>
   {% endif %}
