--- a/flaskr/templates/userspace/schedule.html
+++ b/flaskr/templates/userspace/schedule.html
@@ -2,6 +2,10 @@
 
 {% block header %}
   <h1>{% block title %}My schedule{% endblock %}</h1>
+  {% if g.user %}
+    <a class="action" href="{{ url_for('blog.create') }}">New</a>
+    <a class="action" href="{{ url_for('userspace.profile') }}">Profile</a>
+  {% endif %}
 {% endblock %}
 
 {% block content %}
@@ -17,9 +21,7 @@
   <ul>
     {% for sch in schedules %}
       <li>{{ sch['name_s']}}</li>
-      
     {% endfor %}
   </ul>
   
-  {{ schedules }}
 {% endblock %}
