--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -2,7 +2,7 @@
 <title>{% block title %}{% endblock %} - Flaskr</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <nav>
-  <h1><a class="action" href="{{ url_for('blog.index') }}" style="text-decoration: none;" >Flaskr</a></h1>
+  <h1><a class="action" href="{{ url_for('blog.index') }}" style="text-decoration: none;" >Logo</a></h1>
   <ul>
     {% if g.user %}
       <li><span>{{ g.user['username'] }}</span>
