--- a/flaskr/templates/userspace/schedule.html
+++ b/flaskr/templates/userspace/schedule.html
@@ -5,6 +5,7 @@
   {% if g.user %}
     <a class="action" href="{{ url_for('blog.create') }}">New</a>
     <a class="action" href="{{ url_for('userspace.profile') }}">Profile</a>
+    <a class="action" href="{{ url_for('userspace.addSubject') }}">Ingresar asignatura</a>
   {% endif %}
 {% endblock %}
 
