--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -7,10 +7,10 @@
 {% block content %}
   <form method="post">
     <label for="id">Numero de indentificacion</label>
-    <input type="number" name="idcard" id="idcard" min="11111111">
+    <input type="number" name="idcard" id="idcard" min="11111111" >
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required>
     
-    <input type="submit" value="Iniciar sesion">
+    <input type="submit" value="Iniciar sesion" class="button eliminar">
   </form>
 {% endblock %}
