--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -1,5 +1,5 @@
 html { 
-    font-family: sans-serif; 
+    font-family: 'Verdana', sans-serif;
     padding: 1rem; 
     background: rgb(238,174,202);
     background: -moz-radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
@@ -11,14 +11,16 @@ body {
     max-width: 960px; 
     margin: 0 auto;
     background: rgba(131, 58, 180, 0.38);
+    font-family: 'Raleway', sans-serif;
 }
 h1 { 
-    font-family: Cambria, serif; 
+    font-family: 'Verdana', sans-serif; 
     color: #eeaeca; 
     margin: 1rem 0; 
 }
 a { 
     color: #eeaeca; 
+    text-decoration: none;
 }
 hr { 
     border: none; 
@@ -108,4 +110,70 @@ input.danger {
 input[type=submit] { 
     align-self: start; 
     min-width: 10em; 
+    font-weight: bold;
+    font-family: 'Verdana', sans-serif;
+    background-color: #C100B1;  
+    color: white;  
+    margin-top: 2rem;  
+}
+input { 
+    height: 38px;
+    padding: 6px 10px;
+    background-color: #fff; 
+    border: 1px solid #D1D1D1;
+    border-radius: 4px; 
+    box-shadow: none;
+    box-sizing: border-box;
+}
+button { 
+    background-color: #C100B1;  
+    color: white;  
+    margin-top: 2rem;  
+    font-weight: bold;
+}
+
+button:hover { 
+    background-color: #910096;
+    color: white;
+    margin-top: 2rem;
+} 
+
+select {
+    display: block;
+    font-size: 16px;
+    font-family: 'Verdana', sans-serif;
+    font-weight: 400;
+    color: #fff;
+    line-height: 1.3;
+    padding: .4em 1.4em .3em .8em;
+    width: 400px;
+    max-width: 100%; 
+    box-sizing: border-box;
+    margin: 1.5rem 0;
+    border: 1px solid #181a1b;
+    box-shadow: 0 1px 0 1px rgba(0,0,0,.03);
+    border-radius: .3em;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
+      linear-gradient(to bottom, #181a1b 0%,#181a1b 100%);
+    background-repeat: no-repeat, repeat;
+    background-position: right .7em top 50%, 0 0;
+    background-size: .65em auto, 100%;
+}
+
+select:focus {
+    border-color: #aaa;
+    box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
+    box-shadow: 0 0 0 3px -moz-mac-focusring;
+    color: #222; 
+    outline: none;
+}
+select option {
+    font-weight:normal;
+}
+
+select option[selected] {
+    background-color: violet;
 }
