--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -107,7 +107,7 @@ nav ul li a, nav ul li span, header .action {
 input.danger { 
     color: #cc2f2e; 
 }
-input[type=submit] { 
+input[type=submit],[type=button] { 
     align-self: start; 
     min-width: 10em; 
     font-weight: bold;
@@ -176,4 +176,9 @@ select option {
 
 select option[selected] {
     background-color: violet;
+}
+
+div#addSubjForms {
+    display: flex;
+    justify-content: space-between;
 }
