--- a/flaskr/templates/userspace/schedule.html
+++ b/flaskr/templates/userspace/schedule.html
@@ -45,11 +45,21 @@
 
   </div>
 
-  <ul>
-    {% for sch in schedules %}
-      <li>{{ sch['name_s']}}</li>
-    {% endfor %}
-  </ul>
+  <div class="wrapper">
+    <div class="cols">
+        <div class="col">
+          <ul>
+              {% for sch in schedules %}
+              <div class="container">
+                  <div class="front" style="">
+                      <p><li>{{ sch['name_s']}}</li></p>
+                  </div>
+              </div>
+              {% endfor %}
+          </ul>
+        </div>
+    </div>
+</div>
   
 {% endblock %}
 
